force-app/main/default/objects/Course__c/fields/CourseName__c.field-meta.xml
<CustomField>
    <fullName>CourseName__c</fullName>
    <label>Course Name</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>