force-app/main/default/objects/Course__c/fields/CourseType__c.field-meta.xml
<CustomField>
    <fullName>CourseType__c</fullName>
    <label>Course Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AIM</fullName>
            </value>
            <value>
                <fullName>GLAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>