force-app/main/default/objects/Course__c/fields/RequiredDaysForCert__c.field-meta.xml
<CustomField>
    <fullName>RequiredDaysForCert__c</fullName>
    <label>Required Days For Certification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>