force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CourseName__c</columns>
    <columns>CourseType__c</columns>
    <columns>RequiredDaysForCert__c</columns>
    <columns>CourseDescription__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>